src/test/ui/rfc-2093-infer-outlives/self-structs.stderr
error: rustc_outlives
  --> $DIR/self-structs.rs:4:1
   |
LL | / struct Foo<'a, 'b, T> { //~ ERROR rustc_outlives
LL | |     field1: Bar<'a, 'b, T>
LL | | }
   | |_^
   |
   = note: T : 'a

error: aborting due to previous error

